# sama_api_client

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
documentation/: SAMA API Client 2025.docx
src/sama_api_client/: __about__.py  api_client.py  api_client.pyi  api_core.py  api_core.pyi  api_endpoint.py  api_endpoints.json  configuration.py  format_http_error.py
src/sama_api_client/object_schemas/: api_endpoint.py  api_endpoint.pyi  domain_object.py  domain_object.pyi  link_object.py  link_object.pyi  version_object.py  version_object.pyi
tests/: client_demo.py  core_demo.py
